--- a/style.css
+++ b/style.css
@@ -72,6 +72,48 @@ html,body{
     line-height: 20px;
     
 }
-@media (max-width: ) {
+@media (max-width: 720px ) {
+
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    html,body{
+        width: 100vw;
+        height: 100vh;
+    }
     
+    #main{
+        height: 50%;
+        width: 100%;
+        background-image: url(NikeWebimg.webp);
+        /* background-position: center; */
+        /* background-size: cover; */
+        object-fit: cover;
+        font-family:'Barlow Condensed', sans-serif;
+    }
+    .nav{
+        display: flex;
+        align-items: center;
+        justify-content: end;
+        height: 10vh;
+        width: 100%;
+        /* background-color: yellow; */
+    }
+    .nav .centNav{
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        width: 50vw;
+        height: 80%;
+        
+    }
+    .nav .centNav a{
+        text-decoration: none;
+        color: white;
+        font-size: 1.5vw;
+        letter-spacing: -.8px;
+    }
+
 }
